# Inventory

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: result.json
scripts/: Align.py  Classes.py  Extract data.py  Extract_data.py  Load_in_json.py
